--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <p>&nbsp;👇WATCH MY CV👇</p>
 </div>
 <div class="top">
-    <a href="https://blog.csdn.net/weixin_51263734" target="_blank">我的兴趣</a>
-    <a href="https://blog.csdn.net/weixin_51263734" target="_blank">我的过去</a>
-    <a href="https://blog.csdn.net/weixin_51263734" target="_blank">我的梦想</a>
-    <a href="https://blog.csdn.net/weixin_51263734" target="_blank" style="float:right">LSGF的博客</a>
+    <a href="https://www.bilibili.com" target="_blank">我的兴趣</a>
+    <a href="https://www.bilibili.com" target="_blank">我的过去</a>
+    <a href="https://www.bilibili.com" target="_blank">我的梦想</a>
+    <a href="4https://www.bilibili.com" target="_blank" style="float:right">LSGF的博客</a>
 </div>
 <div class="content">
 
